src/snapshots/afrotd__parser__tests__rule_html_2.10.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.10.4 Violation
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Eine Violation ist ein Regelverstoß, für den keine Strafe
                vorgeschrieben ist. Da es kein Foul ist, hebt es kein Foul auf.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.10.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
