src/snapshots/afrotd__parser__tests__rule_html_2.11.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.11.1 Fumble
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Fumbeln des Balles ist der Verlust des Ballbesitzes eines
                Spielers durch irgendeine Aktion, ausgenommen Passen, Kicken
                oder erfolgreiches Übergeben des Balles (A.R. 2.19.2.I, A.R.
                4.1.3.I). Der Status des Balles ist ein Fumble.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.11.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
