src/snapshots/afrotd__parser__tests__rule_html_2.11.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.11.2 Muff
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Muffen ist die Berührung des Balles beim erfolglosen Versuch
                des Fangens oder Recoverns. Muffen des Balles ändert nicht
                dessen Status.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.11.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
