src/snapshots/afrotd__parser__tests__rule_html_2.11.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.11.5 Blocken eines Scrimmage Kicks
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Blocken eines Scrimmage Kicks ist das Berühren des gekickten
                Balles durch einen Gegner des Kicking Teams bei dem Versuch zu
                verhindern, dass der Ball die neutrale Zone überquert (Regel
                6.3.1.b).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.11.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
