src/snapshots/afrotd__parser__tests__rule_html_2.12.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.12.3 Endlinien
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Eine Endlinie erstreckt sich zwischen den Seitenlinien, 10 m
                hinter einer Goalline und trennt die Endzone von der Zone, die
                sich im Aus befindet. Die gesamte Endlinie befindet sich im
                Aus.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.12.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
