src/snapshots/afrotd__parser__tests__rule_html_2.12.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.12.4 Begrenzungslinien
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Begrenzungslinien sind die Seitenlinien und die Endlinien.
                Die Zone, die durch die Begrenzungslinien eingeschlossen ist,
                wird mit „inbounds“ bezeichnet und die Zone, die die
                Begrenzungslinien umgibt, einschließlich der Begrenzungslinien,
                wird mit „im Aus“ bezeichnet.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.12.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
