src/snapshots/afrotd__parser__tests__rule_html_2.12.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.12.5 Restraining Line
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Eine Restraining Line ist Teil einer vertikalen Fläche, die die
                Aufstellung eines Teams beim Free Kick einschränkt. Die Fläche
                der Restraining Line ist über die Seitenlinien hinaus
                verlängert (A.R. 2.12.5.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.12.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
