src/snapshots/afrotd__parser__tests__rule_html_2.12.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.12.6 Meterlinie
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Eine Meterlinie (Yardline) ist jede Linie des Spielfeldes, die
                parallel zu den Endlinien liegt. Die eigenen Meterlinien jedes
                Teams, ob markiert oder unmarkiert, sind von der eigenen
                Endzone bis zur 50-Meterlinie durchgehend nummeriert.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.12.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
